<resources>
    <string name="app_name">njoin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_signin">เข้าสู่ระบบ</string>
    <string name="txt_username">อีเมล</string>
    <string name="txt_password">รหัสผ่าน</string>
    <string name="txt_sign_in_with_google">เข้าสู่ระบบด้วยบัญชี Google</string>
    <string name="txt_don_t_have_an_account">Don\'t have an account?</string>
    <string name="txt_sign_up">สมัครสมาชิก</string>
    <string name="txt_confirm_password">ยืนยันรหัสผ่านอีกครั้ง</string>
    <string name="txt_fullname">ชื่อจริงที่ใช้ในระบบ</string>
    <string name="txt_submit">ยืนยัน</string>
    <string name="title_activity_main_page" translatable="false">MainPageActivity</string>
    <string name="title_home" translatable="false">หน้าแรก</string>
    <string name="title_review" translatable="false">รีวิวล่าสุด</string>
    <string name="title_profile" translatable="false">ฉัน</string>
    <string name="title_notifications" translatable="false">แจ้งเตือน</string>
    <string name="title_activity_product_detail">Product_detail</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="search_data">กำลังค้นหาข้อมูล</string>
    <string name="wait">กรุณารอสักครู่ ...</string>
</resources>
