<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity" android:background="@android:color/background_light">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="57dp" android:paddingLeft="10dp"

            android:background="@drawable/shadow_view" android:contentDescription="@string/app_name">
        <ImageButton
                android:src="@drawable/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:id="@+id/imageButton"
                android:background="@android:color/transparent" android:layout_margin="10dp"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>
    <TextView
            android:text="SIGN UP"
            android:layout_width="match_parent"
            android:layout_height="57dp" android:id="@+id/textView4" android:layout_weight="1"
            android:gravity="center" android:textSize="18sp" android:textColor="@color/color_gray_dark"
            android:contentDescription="@string/app_name"/>
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="ln" android:layout_marginTop="57dp">
        <TextView
                android:text="@string/txt_sign_up"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/color_gray_light"
                android:textSize="30sp"
                android:contentDescription="@string/app_name"
                android:layout_marginBottom="20dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login"
                android:padding="10dp"
                android:layout_margin="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            <ImageView
                    android:src="@drawable/ic_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:contentDescription="@string/app_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:id="@+id/editText"
                    android:hint="@string/txt_username"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="edtid"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login" android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            <ImageView
                    android:src="@drawable/ic_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewsa"
                    android:contentDescription="@string/app_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:id="@+id/qweeditTextds"
                    android:hint="@string/txt_password"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="edt_pw"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">
            <ImageView
                    android:src="@drawable/ic_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageddaViewsa"
                    android:contentDescription="@string/app_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:id="@+id/ediasdtTextds"
                    android:hint="@string/txt_confirm_password"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="edt_pw"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">
            <ImageView
                    android:src="@drawable/ic_lsit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewasdsa"
                    android:contentDescription="@string/app_name"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:id="@+id/editTesdaxtds"
                    android:hint="@string/txt_fullname"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="edt_pw"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login_blue"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">
            <TextView
                    android:text="@string/txt_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:gravity="center"
                    android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>