<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragment.login.LoginFragment"
                android:background="@android:color/background_light">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginBottom="20dp">
        <TextView
                android:text="@string/txt_don_t_have_an_account"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:gravity="center"/>
        <Button
                android:text="@string/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_signup"
                android:foreground="?attr/selectableItemBackground"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/kanitregular"
                android:textSize="14sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="ln">
        <TextView
                android:text="@string/txt_signin"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="@color/color_gray_light"
                android:textSize="30sp"
                android:contentDescription="@string/txt_signin"
                android:layout_marginBottom="20dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login"
                android:padding="10dp"
                android:layout_margin="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            <ImageView
                    android:src="@drawable/ic_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:contentDescription="imgid"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:id="@+id/edt_username"
                    android:hint="@string/txt_username"
                    android:fontFamily="@font/kanitregular"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="edtid"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
            <ImageView
                    android:src="@drawable/ic_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewsa"
                    android:contentDescription="pw"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:id="@+id/edt_passwords"
                    android:hint="@string/txt_password"
                    android:fontFamily="@font/kanitregular"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="edt_pw"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login_blue"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp" android:id="@+id/linear_signin">
            <TextView
                    android:text="@string/txt_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:gravity="center"
                    android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_login_blue"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp">
            <TextView
                    android:text="@string/txt_sign_in_with_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tedxtView2"
                    android:layout_weight="1"
                    android:textColor="@android:color/background_light"
                    android:gravity="center"
                    android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/v_bg"
            android:background="@android:color/background_light" android:alpha="0.5" android:visibility="gone"/>
    <com.agrawalsuneet.dotsloader.loaders.LazyLoader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:lazyloader_animDur="350"
            android:layout_centerInParent="true"
            app:lazyloader_dotsDist="10dp"
            app:lazyloader_dotsRadius="5dp"
            app:lazyloader_firstDelayDur="150"
            app:lazyloader_firstDotColor="@color/colorPrimaryDark"
            app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
            app:lazyloader_secondDelayDur="300"
            app:lazyloader_secondDotColor="@color/colorPrimaryDark"
            app:lazyloader_thirdDotColor="@color/colorPrimaryDark" android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" android:layout_marginBottom="20dp" android:visibility="gone"
            android:id="@+id/progress">
    </com.agrawalsuneet.dotsloader.loaders.LazyLoader>
</RelativeLayout>